syntax = "proto3";

package a.gleb.grpcserverapp.proto;

message ImageRequest{
  string name = 1;
  bytes data = 2;
  int64 offset = 3;
}

message ImageResponse{
  int32 status = 1;
  string message = 2;
}

message FileInfo{
  string filename = 1;
  string filetype = 2;
  string dateCreation = 3;
}

message FileResponse {
  repeated FileInfo fileInfo = 1;
}

message FileRequest{
  string message = 1;
}

message DownloadFileRequest{
  string filename = 1;
}

message DownloadFileResponse{
  bytes data = 1;
  int32 size = 2;
}

service ImageService{
  rpc UploadImage(stream ImageRequest) returns (ImageResponse);
  rpc CheckFiles(FileRequest) returns (FileResponse);
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse);
}